# fast_transfer

./: CMakeLists.txt  Convert.c  Convert.h  README.md  ft.buffer.c  ft.buffer.h  ft.c  ft.config.h  ft.convert.c  ft.convert.h  ft.crc.c  ft.crc.h  ft.h  ft.parser.c  ft.parser.h  ft_tests.cpp
fast_transfer/: CMakeLists.txt  buffer.c  buffer.h  crc.c  crc.h  ft.c  ft.h  ft_config.h  parser.c
include/: ft.config.h
src/: CMakeLists.txt
src/fast_transfer/: ft.h  ft_config.h
src/fast_transfer/ft_impl/: buffer.h  crc.c  ft.c  parser.c  parser.h
src/parser/: ft.parser.c
tests/: CMakeLists.txt  buffer_tests.h  ft.test_helpers.cpp  ft.test_helpers.h  ft.tests.cpp  ft_init_tests.h  ft_modified_tests.h  ft_receive_tests.h  ft_send_tests.h  ft_tests.cpp  inconsistent_message.h  mock_message.cpp  mock_message.hpp  mock_serial.cpp  mock_serial.hpp  tests.cpp
